tests/codegen/fail/unsupported_match_question_mark_build.stderr
error: tests/codegen/fail/unsupported_match_question_mark_build.ql:7:12: LLVM IR backend foundation does not support `match` lowering yet
      return match flag {
             ^^^^^^^^
error: tests/codegen/fail/unsupported_match_question_mark_build.ql:14:12: LLVM IR backend foundation does not support `?` lowering yet
      return helper()?
             ^^^^^^^^
